Version 2.02.62 -
====================================
  Update check for selinux libraries and link them only when needed.
  Define and use internal makefile variable SELINUX_LIBS and STATIC_LIBS.
  Remove -rdynamic from static builds.
  Update check for pthread library and link it only when needed.
  Define and use internal makefile variable PTHREAD_LIBS.
  Update check for readline library and link it only when needed.
  Define and use internal makefile variable READLINE_LIBS.
  Define and use internal makefile variable LVMINTERNAL_LIBS.
  Help for configure prints --disable-fsadm.
  Use consistently $() instead of ${} for all Makefile variables.
  Replace CFLOW_CMD only in make.tmpl and use it as variable elsewhere.
  Use $(top_builddir) for inclusion of make.tmpl in Makefiles.
  Fix autoconf warning about ignored datarootdir.
  Increase AC_PREREQ version to 2.61 (for AC_PROC_SED, AC_PROG_MKDIR_P).
  Handle a misaligned device that reports a -1 alignment_offset.
  Extend core allocation code in preparation for mirrored log areas.
  Rewrite clvmd init script.
  Remove lvs_in_vg_activated_by_uuid_only call.
  Run device info query device by uuid only.
  Don't touch /dev in vgmknodes if activation is disabled.
  Update lvm2app.h Doxygen comments and add lvm2app Doxygen config file.
  Update nightly tests and lvm2app unit tests to cover tags.
  Add lvm2app functions lvm_{vg|lv}_{get|add|remove}_tag() functions.
  Add dm_pool_strdup to allocate and copy memory in tag library function.
  Refactor vgcreate, vgchange, and lvchange for tag library function.
  Refactor snapshot-merge deptree and device removal to support info-by-uuid.

Version 2.02.61 - 15th February 2010
====================================
  Fix some consts and floating point gcc warnings.
  Fix dm_report_field_uint64 function to accept 64-bit ints.
  Change readhead display to use 32-bit -1 const instead of 64-bit.
  Add LVM_SUPPRESS_LOCKING_FAILURE_MESSAGES environment variable.